--- a/lab-5-student-mckegneyr.html
+++ b/lab-5-student-mckegneyr.html
@@ -237,11 +237,11 @@ teacher_evals_clean %&gt;%
 <dl>
 <dt data-target-cell="annotated-cell-7" data-target-annotation="2">2</dt>
 <dd>
-<span data-code-cell="annotated-cell-7" data-code-lines="12,16" data-code-annotation="2">Link that helped me figure out how to count classes and teachers: <a href="https://stackoverflow.com/questions/38382990/in-r-how-do-i-count-unique-values-of-a-factor-based-on-another-factor" class="uri">https://stackoverflow.com/questions/38382990/in-r-how-do-i-count-unique-values-of-a-factor-based-on-another-factor</a>.</span>
+<span data-code-cell="annotated-cell-7" data-code-lines="12,16" data-code-annotation="2">Link that helped me figure out how to count unique classes and teachers: <a href="https://stackoverflow.com/questions/38382990/in-r-how-do-i-count-unique-values-of-a-factor-based-on-another-factor" class="uri">https://stackoverflow.com/questions/38382990/in-r-how-do-i-count-unique-values-of-a-factor-based-on-another-factor</a>.</span>
 </dd>
 </dl>
 <p>Question 6 answer/response: By River Mckegney</p>
-<p>This dataset appears to contain a total of <strong>939 classes and 297 instructors</strong>.</p>
+<p>This dataset appears to contain a total of 939 unique classes/courses and 297 instructors.</p>
 <p><strong>7. One teacher-course combination has some missing values, coded as <code>NA</code>. Which instructor has these missing values? Which course? What variable are the missing values in?</strong></p>
 <pre class="{r}"><code>#| label: uncovering-missing-values
 # code chunk for Q6
