add teacher_evals_codebook.pdf, and solve question 9

--- a/lab-5-student-mckegneyr.html
+++ b/lab-5-student-mckegneyr.html
@@ -328,24 +328,18 @@ teacher_evals_clean %&gt;%
 
 # Classes that conducted entire questionair
 
-teacher_evals_clean %&gt;%
-  group_by(course_id, teacher_id) %&gt;%
-  distinct(course_id, teacher_id) %&gt;%
-  filter("question_no" == "901")
-
-         question_no == "902"
-         question_no == "903",
-         question_no == "904",
-         question_no == "905",
-         question_no == "906",
-         question_no == "907",
-         question_no == "908",
-         question_no == "909")
-
-teacher_evals_clean %&gt;%
-  group_by(question_no) %&gt;%
-  distinct(course_id, teacher_id) %&gt;%
-  filter(question_no == c("901", "902"))</code></pre>
+  teacher_evals_clean %&gt;%
+    group_by(course_id, teacher_id) %&gt;%
+    summarize(question_count = n_distinct(question_no)) %&gt;%
+    ungroup() %&gt;%
+    filter(question_count == 9)
+  
+# Sample Test: confirm code above works
+  teacher_evals_clean %&gt;%
+    filter(course_id == "0000-SEM-SP",
+           teacher_id == "38335")</code></pre>
+<p>Question 9 answer/response: River Mckegney</p>
+<p>It appears 49 teacher/course combos (aka specific class sections) contained all 9 questions of the questionair.</p>
 </section>
 </section>
 <section id="rate-my-professor" class="level2">
