Edit quest 12 response

--- a/lab-5-student-mckegneyr.html
+++ b/lab-5-student-mckegneyr.html
@@ -410,7 +410,7 @@ teacher_evals_clean %&gt;%
   mutate(prop_range = prop_max - prop_min) %&gt;%
   arrange(desc(prop_range))</code></pre>
 <p>Question 12 answer/response: By River Mckegney</p>
-<p>It appears that instructor 76394 (47% difference in respondents) and 38347 (about 35% difference in respondents) had the greatest difference or range in respondents for the evaluation questionair across all their classes.</p>
+<p>It appears that instructor 76394 (47% difference in percentage of respondents) and 38347 (about 35% difference in percentage of respondents) had the greatest difference or range in respondents for the evaluation questionair across all their classes.</p>
 </section>
 <section id="references" class="level2">
 <h2 class="anchored" data-anchor-id="references">References:</h2>
